# speakloop

./: .gitignore  AI_CONTEXT.md  CHANGELOG.md  CLAUDE.md  LICENSE  MORNING_REPORT.md  README.md  RETURN_REPORT.md  bug.md  download_aria.sh  improvement.md  pyproject.toml
.claude/rules/: llm-calls.md  testing.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
content/: questions.yaml
doc/: QWEN_IMPROVMENT_RESEARCH.md  research_asr.md  research_asr_l2_accent.md  research_context_engineering.md  research_install.md  research_llm.md  research_methodology.md  research_pronunciation.md  research_tts.md
eval/grammar/: PROTOCOL.md  README.md  run_eval.py
eval/grammar/baselines/: thresholds.yaml
eval/grammar/cases/: case-001.yaml  case-002.yaml  case-003.yaml  case-004.yaml  case-005.yaml  case-006.yaml  case-007.yaml  case-008.yaml  (+17 more)
specs/001-v1-product-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-post-session-debrief/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-asr-l2-accent-accuracy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-public-release-readiness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-context-engineering-audit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-feedback-quality-reliability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-robust-model-download/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-openrouter-cloud-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-cloud-coaching-feedback/: plan.md  spec.md
specs/010-interview-loop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-claude-code-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-responsive-session-flow/: RETURN_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-agent-context-overhaul/: RETURN_REPORT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-engine-aware-onboarding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-pronunciation-drills/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-pronunciation-trainer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-self-practice-modes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  live_cloud_test.py  live_download_test.py  live_llm_test.py  live_pron_test.py
tests/contract/: test_asr_interface.py  test_cli_commands.py  test_content_schema.py  test_llm_interface.py  test_report_frontmatter.py  test_tts_interface.py
tests/integration/: asr_fallback_test.py  asr_model_memoization_test.py  asr_pipeline_test.py  asr_whisper_context_test.py  phase_c_debrief_test.py  repro_fresh_5of5_test.py  repro_gate_test.py  test_analysis_equivalence.py  test_anonymous_download.py  test_aria_fallback.py  test_artifact_consistency.py  test_caffeinate_lifecycle.py  test_claude_engine_degradation.py  test_cloud_coaching.py  test_cloud_mode.py  test_context_file_budget.py  test_daily_loop.py  test_default_questions_inrepo.py  test_doctor_claude_rows.py  test_doctor_failure_modes.py  test_drill_hear_first_and_retry.py  test_drills_additive_byte_identical.py  test_drills_concurrent_with_feedback.py  test_eval_not_shipped.py  test_followups_stage.py  test_frontmatter_cross_parser.py  test_help_without_models.py  test_local_mode_unchanged.py  test_no_network_during_session.py  test_offline_after_install.py  test_path_portability_audit.py  test_pause_tolerance.py  test_phase_a_install_flow.py  test_phase_a_listen.py  test_phase_b_abort.py  test_phase_b_attempt.py  test_phase_b_filename_disambiguation.py  test_phase_b_no_microphone.py  test_phase_b_silent_attempt.py  test_phase_c_error_persisted.py  (+13 more)
tests/unit/: test_claude_code_engine.py  test_claude_tiering.py  test_engine_selection.py  test_loop_config.py
(+533 files in other folders)
